--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
         <h1><a href="/">Elliot Alker</a></h1>
         <nav>
                 <ul>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/blog">Blog</a></li>
-                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/about">ABOUT</a></li>
+                    <li><a href="/blog">BLOG</a></li>
+                    <li><a href="/projects">PROJECTS</a></li>
                 </ul>
         </nav>
         </header>
