--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,15 +4,16 @@ html {
   overflow-y: scroll;
   max-width: 45em;
   margin: 0 auto;
+  background: #FFFEF2;
 }
 
 body {
     line-height: 1.5;
     padding: 0 1em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
+    font-family: 'Georgia', Serif;
 }
 
-#bloglist{
+#bloglist {
   ul {
   list-style: none;
   }
@@ -37,36 +38,60 @@ header {
 header h1 {
   margin: 0;
   padding: 0; 
-  font-weight: bold;
+  font-family: 'Baskerville', Serif;
+  
 }
   
 header nav {
   margin-left: auto;
   /* Move nav to the right */ 
 }
+
   
-    header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0; }
-    header ul li {
-      display: inline-block;
-      // font-size: 1.8rem;
-      padding: 0 10px;
-      margin-right: 1em; }
-      header ul li:last-child {
-        margin-right: 0; }
-      header ul li a {}
-  @media (max-width: 45rem) {
-    header nav {
-      width: 100%; }
-    header ul {
-      margin-top: 1rem; }
-      header ul li {
-        padding-left: 0;
-        margin-right: 0; }
-        header ul li a {} 
-          }
+header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; 
+}
+
+header ul li {
+  display: inline-block;
+  font-family: 'Baskerville', Serif;
+  padding: 0 10px;
+  margin-right: 1em; 
+}
+
+header ul li:last-child {
+  margin-right: 0; 
+}
+  
+header ul li a {
+  color: black;
+  text-decoration: none;  
+}
+
+header a:hover {
+  color: green;
+  text-decoration: none;
+}
+
+@media (max-width: 45rem) {
+  header nav {
+    width: 100%; 
+  }
+  
+  header ul {
+    margin-top: 1rem; 
+  }
+  
+  header ul li {
+    padding-left: 0;
+    margin-right: 0; 
+  }
+  
+  header ul li a {} 
+}
+
 .headline {
   text-align: center;
   letter-spacing: 1px;
@@ -92,7 +117,11 @@ header nav {
 
 .post-content { 
   p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
+    font-family: 'Georgia', Serif;
+  }
+
+  h1, h2, h3, h4 {
+    font-family: 'Georgia', Serif; 
   }
   
   li {
@@ -105,12 +134,13 @@ header nav {
 h1, h2, h3, h4 {
   margin-top: 1em;
   font-weight: normal;
-  font-family: 'Helvetica', sans-serif;
+  
+  font-family: 'Georgia', Serif;
 }
 
 p {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
-  line-height: 1.8;
+  font-family: 'Georgia', Serif;
+  line-height: 1.6;
   color: #525050;
 }
 
@@ -125,6 +155,7 @@ a {
 
 a:hover {
     color: darkgreen;
+    text-decoration: underline; 
 }
 
 .head {
