--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -70,6 +70,7 @@
 
 #post-title {
   margin-bottom: $small-spacing;
+  margin-top: 0;
   padding-bottom: 0;
   padding-top: 0;
   font-size: $font-size-xxl;
