--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -235,9 +235,9 @@ blockquote {
 
 #post-title {
   margin-bottom: 0;
+  margin-top: 0;
   padding-bottom: 0;
-	padding-top: 0;
-
+  padding-top: 0;
 }
 
 #post-date {
