--- a/assets/css/_forms.scss
+++ b/assets/css/_forms.scss
@@ -1,5 +1,3 @@
-@use "sass:color";
-
 // Form styling
 form {
   margin-bottom: $large-spacing;
@@ -37,7 +35,7 @@ select {
   &:focus {
     color: $text-dark;
     background-color: #fff;
-    border-color: color.adjust($link-color, $lightness: 25%);
+    border-color: lighten($link-color, 25%);
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba($link-color, 0.25);
   }
@@ -114,10 +112,10 @@ select {
   color: #fff;
   background-color: $link-color;
   border-color: $link-color;
-  
+
   &:hover {
-    background-color: color.adjust($link-color, $lightness: -7.5%);
-    border-color: color.adjust($link-color, $lightness: -10%);
+    background-color: darken($link-color, 7.5%);
+    border-color: darken($link-color, 10%);
   }
 }
 
